--- a/project.config.json
+++ b/project.config.json
@@ -6,15 +6,15 @@
 	"setting": {
 		"urlCheck": false,
 		"es6": true,
-		"enhance": true,
 		"postcss": true,
 		"preloadBackgroundData": false,
 		"minified": true,
 		"newFeature": true,
-		"coverView": true,
 		"autoAudits": false,
+		"coverView": true,
 		"showShadowRootInWxmlPanel": true,
 		"scopeDataCheck": false,
+		"enhance": true,
 		"checkInvalidKey": true,
 		"checkSiteMap": true,
 		"uploadWithSourceMap": true,
@@ -29,7 +29,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.11.2",
 	"appid": "wx0aa89d61c915a749",
-	"projectname": "heimaShop",
+	"projectname": "ygDemo",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
